Changelog for SEO Pro.

SEO Pro 1.2.2 pl
==============
- Add count back to pagetitle & longtitle

SEO Pro 1.2.1 pl
==============
- Set correct preview url for multi-context environments

SEO Pro 1.2.0 pl
==============
- Remove the SEO Pro branding HTML comment
- Add system setting for specifying the title format
- Update counters to set correct value based on title format setting

SEO Pro 1.1.0 pl
==============
- Removed template request parameter for OnLoadWebDocument system event
- Fixed resource/create processor error when creating resource without $data['keywords'] set (PR#56)
- Add build config for GPM
- Add lexicon for branding text
- Fix character count in pagetitle/longtitle to include site_name according to system setting 'usesitename' (#48 and #57)
- Allow plugin to fire on new resource, when template is default_template (#58)
- Refactor assigning and checking of template resource/request variable (#58 and #59)
- Add system settings for max amount keywords for title/description (#51)
- Add keyword counter to Keywords labels on title/description (#51)
- Add support for Yandex (via system settings)
- Add tooltip to focus keywords field (#52)

seoPro 1.0.4 pl
==============
- Saving keywords on save #29
- FIX #39 alias error on homepage (friendly urls) @bartholomej
- Added seopro.disabledtemplates option @Jako

seoPro 1.0.3 pl
==============
- Fixed keyword count to work also with Cyrillic
- Fixed empty NOT NULL field resource to NULL
- Added styles for MODX 2.3, thanks to christianseel

seoPro 1.0.2 pl
==============
- Added system setting for to enabled/disabled sitename in preview and seoPro.title placeholder


seoPro 1.0.0 pl
==============
- Initial Public Release
- Added several lexicons
-- Special thanks to
--- DE: Christian Seel
--- FR: Romain Tripault
--- IT: Alberto Rossi
--- RU: Ilya Ershov
- Added system setting for divider
- Added system setting for field where seoPro should trigger on.