@@ -3,4 +3,3 @@
  * @package seopro
  */
 class seoKeywords extends xPDOSimpleObject {}
-?>
